
2004-06-04  Florian Boor <florian.boor@kernelconcepts.de>
	* Version 0.23 released
	* Makefile: V 0.23

2004-06-04  Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: (main): Removed hardcoded toolbar style.

2004-05-02  Philip Blundell  <philb@gnu.org>

	* Version 0.22 released.

2004-05-02  Philip Blundell  <philb@gnu.org>

	* main.c (ask_save_before_exit): Remove stray 'default:' label
	causing compile error.

2004-03-07  Philip Blundell  <philb@gnu.org>

	* Makefile (clean): Also remove $(DEPS).

2003-10-19  Philip Blundell  <philb@gnu.org>

	* Makefile: Add dependencies.  Use STANDARD_CFLAGS,
	STANDARD_CPPFLAGS, STANDARD_LDFLAGS.

2003-10-09  Philip Blundell  <philb@gnu.org>

	* Version 0.20 released.

2003-10-09  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add cs.

	* main.c (open_file): Try to fix memory management problems
	relating to window title.

2003-09-12  Philip Blundell  <philb@gnu.org>

	* Version 0.19 released.

2003-09-12  Philip Blundell  <philb@gnu.org>

	* Makefile: Use $(GPEFLAGS), $(GPELIBS).
	(LINGUAS): Add sk.
	* po/sk.po: New file, courtesy Marcel Telka.

2003-08-05  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add nl.
	* po/nl.po: New file, courtes Elros Cyriatan.

2003-08-01  luc  <luc@handhelds.org>

	* main.c (select_save_file_as): i18n cosmetic.

2003-07-06  Moray Allan  <moray@sermisy.org>

	* Makefile, main.c (main): Removed legacy GTK1 code.

2003-07-06  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add sv.
	* po/sv.po: New file, courtesy Christian Rose.	

2003-06-26  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add wa.
	(install-program): Preserve extension on installed .desktop file.
	* po/wa.po: New file, courtesy Pablo Saratxaga.

2003-05-09  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add ro.
	* po/ro.po: New file, courtesy Laurentiu Buzdugan.

2003-04-21  Philip Blundell  <philb@gnu.org>

	* Version 0.18 released.
	